update P1 to reflects last changes before going live

--- a/app/assets/sass/ERC.scss
+++ b/app/assets/sass/ERC.scss
@@ -64,7 +64,7 @@ footer {
 
 //---------------------------------------- BODY------------------------------------------------//
 
-body p, p.govuk-body-l{
+body p, p.govuk-body-l, .govuk-heading-s{
     color: $erc-text-blue;
 }
 
