--- a/app/views/forms/education/confirmation.html
+++ b/app/views/forms/education/confirmation.html
@@ -33,27 +33,20 @@
     {% if data['defer'] === 'yes' %}
     {{ govukButton({
       text: "Find out the next steps when you defer",
-      href: "/forms/education/P1-start.html",
+      href: "https://www.eastrenfrewshire.gov.uk/article/9948/Apply-for-primary-1-proof-of-circumstances",
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
     }) }}
     {% else %}
     {{ govukButton({
       text: "Find out the next steps of the application process",
-      href: "/forms/education/P1-start.html",
+      href: "https://www.eastrenfrewshire.gov.uk/article/9948/Apply-for-primary-1-proof-of-circumstances",
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
     }) }}
     {% endif %}
 
     </div>
   </div>
-  <div class="UR-notes-box">
-      <h3 class="govuk-heading-s">User research:</h3>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>one didn't see the button</li>
-        <li>all expect to receive an email with all the info from the summary on it .... and the next steps</li>
-        <li>all surprised to be back on the first page</li>
-      </ul>
-  </div>
+
 {% endblock %}
 
 
