--- a/app/views/forms/education/info1.html
+++ b/app/views/forms/education/info1.html
@@ -13,11 +13,11 @@
             Apply online for primary 1 - August 2019
         </h1>
         
-        <p><strong>Sometimes more children apply to a school than we have places for.</strong></p> 
+        <p>Sometimes more children apply to a school than we have places for.</p> 
 
-        <p><strong>If this happens we allocate places by priority. We now need to ask for extra information to find out more about your circumstances.</strong></p> 
+        <p>If this happens we allocate places by priority. We now need to ask for extra information to find out more about your circumstances.</p> 
         
-        <p><strong>We ask for proof of any information you give us.</strong></p>
+        <p>We ask for proof of any information you give us.</p>
 
 
       {{ govukButton({
@@ -28,7 +28,7 @@
     </div>
 </div>
 <div class="alt-notes-box">
-    <p><a href="/forms/education/info.html"><strong>first screen</strong></a></p>
+    <p><a href="/forms/education/info.html"><strong>previously tested screen</strong></a></p>
 </div>
 
 
