--- a/app/views/forms/education/school-2nd.html
+++ b/app/views/forms/education/school-2nd.html
@@ -27,7 +27,7 @@
               }
             },
             hint: {
-              html: "<p><a>Read the admissions policy on preferred alternative schools</a></p>"
+              html: "<p><a>Read the admissions information on preferred alternative schools</a></p>"
             },
             items: [
               {
@@ -136,8 +136,8 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>No previous page, guidance at the top with a link to a reduced policy document - <strong>We want it to open in a new tab to avoid losing progress</strong> - just the part for alternative school choice - link will be provided + to be approved by Education</li> 
-        <li>None option to go at the top </li>
+    
+        <li>can't put the real link above, <a href="https://www.eastrenfrewshire.gov.uk/9922" target="_blank">here is the link to admission if catchment school is full</a></li>
     </ul>
 </div>
 {% endblock %}
