--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -17,7 +17,8 @@
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="education/P1-start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>13/12 morning</strong></li><br>
+        <li><a href="education/P1-start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>18/12 morning</strong><br>
+        Form LIVE since 17/12/18</li><br>
         <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">CBL</a><br>version following user testing on Monday 10/12 - annotated with tags<br><strong class="govuk-tag info">last update:</strong><strong> 14/12 evening</strong><br>
           See the flow of screens used in UR session of Monday 10/12 <a href="{{ asset_path }}/images/CBLflowur1012.pdf" target="_blank">as a PDF</a></li><br>
         <li><a href="equal-opportunities/start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity</a><br>Based on Housing document<br> <strong class="govuk-tag info">last update:</strong>  <strong>13/12 morning</strong></li><br>
