small content fixes

--- a/app/views/forms/housing/CBL16.html
+++ b/app/views/forms/housing/CBL16.html
@@ -47,7 +47,7 @@
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>validation: Confirm 16 or over</li>
+      <li>validation: <span class="govuk-error-message">Confirm 16 or over</span></li>
     </ul>
 </div>
 
