--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -154,9 +154,9 @@
               checked: checked("leave1", "Asked or told to leave")
             },
             {
-              value: "Marriage breakdown",
-              text: "Marriage breakdown",
-              checked: checked("leave1", "Marriage breakdown")
+              value: "Relation breakdown",
+              text: "Relation breakdown",
+              checked: checked("leave1", "Relation breakdown")
             },
             {
               value: "End of lease",
