--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -50,7 +50,7 @@
 
       {{ govukInput({
         label: {
-          text: "Telephone/mobile number"
+          text: "Phone"
         },
         id: "telephone-number",
         name: "telephone-number",
