--- a/app/views/forms/housing/CBLadd-child1-loop.html
+++ b/app/views/forms/housing/CBLadd-child1-loop.html
@@ -129,7 +129,7 @@
 
       {{ govukInput({
         label: {
-          text: "Enter their address"
+          text: "Enter their address, including postcode"
         },
         id: "child-add1",
         name: "child-add1",
@@ -156,7 +156,7 @@
       <li>Validation - name, relation are not empty: Enter first name - Enter last name  - Enter relationship</li>
       <li>dob, 3 fields not empty: Enter date of Birth - and if possible is a valid date (not the 31 of April) - Enter valid date</li>
       <li>need to pick one Gender, but description if Other is optional - Enter gender</li>
-      <li>address - Enter their address</li>
+      <li>address - Enter their address, including postcode</li>
       <li>same for all other screen for child 2 etc....</li>
       <li><strong>we need to be able to enter 5 children</strong> potentially. On the 5th at the bottom, we need an open textbox with label: <a href="/forms/housing/CBLchild2">Tell us about anyone else you didn't add yet (if applicable)</a> (placeholder for now, content by Sharon later)</li>
     </ul>
