--- a/app/views/forms/housing/CBLaddress2-loop-joint.html
+++ b/app/views/forms/housing/CBLaddress2-loop-joint.html
@@ -183,9 +183,9 @@
             checked: checked("leave2-joint", "Asked or told to leave")
           },
           {
-            value: "Marriage breakdown",
-            text: "Marriage breakdown",
-            checked: checked("leave2-joint", "Marriage breakdown")
+            value: "Relation breakdown",
+            text: "Relation breakdown",
+            checked: checked("leave2-joint", "Relation breakdown")
           },
           {
             value: "End of lease",
