--- a/app/views/forms/housing/CBLaddress2-loop.html
+++ b/app/views/forms/housing/CBLaddress2-loop.html
@@ -184,9 +184,9 @@
             checked: checked("leave2", "Asked or told to leave")
           },
           {
-            value: "Marriage breakdown",
-            text: "Marriage breakdown",
-            checked: checked("leave2", "Marriage breakdown")
+            value: "Relation breakdown",
+            text: "Relation breakdown",
+            checked: checked("leave2", "Relation breakdown")
           },
           {
             value: "End of lease",
