--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -20,7 +20,7 @@
                 </h2>
                 </legend>
                 <span id="area-hint" class="govuk-hint govuk-!-margin-bottom-8">
-                    We use this information for planning purposes. Your choices won't prevent you from bidding for homes in areas you have not selected.<br><br>
+                    Your choices won't prevent you from bidding for homes in areas you have not selected.<br><br>
                     Select all that apply.
                 </span>
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
