--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -14,7 +14,7 @@
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <h2 class="govuk-heading-m">
-        We need to know about the bedrooms at your current address.
+        We need to know about the bedrooms at your current address
       </h2>
 <br><br>
       <form class="form" method="post">
