--- a/app/views/forms/housing/CBLhomeless-question.html
+++ b/app/views/forms/housing/CBLhomeless-question.html
@@ -19,7 +19,7 @@
         name: "homeless",
         fieldset: {
           legend: {
-            text: "Are you homeless or at risk of becoming homeless in the next 2 months?",
+            text: "Are you homeless or at risk of becoming homeless?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
