--- a/app/views/forms/housing/CBLimmigration.html
+++ b/app/views/forms/housing/CBLimmigration.html
@@ -68,7 +68,7 @@
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
   <p>wording is different - now asking WILL live with you</p>
-  <p>validation: Confirm you or anyone under immigration control</p>
+  <p>validation: <span class="govuk-error-message">Confirm you or anyone who will live with you under immigration control</span></p>
   <p>Edit: 06/12, if they say no they don't see the next question about recourse to public funds</p>
 </div>
 {% endblock %}
