--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -40,7 +40,7 @@
     }
   },
   hint: {
-    text: "The joint applicant must be 16 or over."
+    text: "A joint applicant must be 16 or over."
   },
   items: [
     {
