--- a/app/views/forms/housing/medical/medication-details.html
+++ b/app/views/forms/housing/medical/medication-details.html
@@ -16,7 +16,7 @@ Medication details
       <form class="form" method="post" novalidate>
 
           <h2 class="govuk-heading-m">
-              We need proof of any medication you current take
+              We need proof of any medication you currently take
           </h2>
           <p class="govuk-body-l">Your application cannot be processed without it.</p>
           <p>You can:</p>
