--- a/app/views/forms/housing/medical/new-accommodation.html
+++ b/app/views/forms/housing/medical/new-accommodation.html
@@ -19,7 +19,7 @@
         name: "needed",
         id: "needed",
         label: {
-          text: "What type of accomodation do you think you need?",
+          text: "What type of accommodation do you think you need?",
           classes: "govuk-!-font-size-24"
         }
       }) }}
