--- a/app/views/forms/housing/members-household/about-you.html
+++ b/app/views/forms/housing/members-household/about-you.html
@@ -130,7 +130,7 @@
 
     {{ govukInput({
       label: {
-        text: "Telephone/mobile number"
+        text: "Phone"
       },
       id: "telephone-number",
       name: "telephone-number",
