--- a/app/views/forms/housing/members-household/member1.html
+++ b/app/views/forms/housing/members-household/member1.html
@@ -57,7 +57,7 @@
         namePrefix: "dob-member1",
         fieldset: {
           legend: {
-            text: "Your date of birth",
+            text: "Date of birth",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--s"
           }
@@ -104,7 +104,7 @@
         name: "gender-member1",
         fieldset: {
           legend: {
-            text: "Your gender",
+            text: "Gender",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--s"
           }
