--- a/app/views/forms/housing/members-household/member2.html
+++ b/app/views/forms/housing/members-household/member2.html
@@ -74,7 +74,7 @@
             namePrefix: "dob-member2",
             fieldset: {
               legend: {
-                text: "Your date of birth",
+                text: "Date of birth",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--s"
               }
@@ -121,7 +121,7 @@
             name: "gender-member2",
             fieldset: {
               legend: {
-                text: "Your gender",
+                text: "Gender",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--s"
               }
