--- a/app/views/forms/housing/members-household/member3.html
+++ b/app/views/forms/housing/members-household/member3.html
@@ -88,7 +88,7 @@
             namePrefix: "dob-member3",
             fieldset: {
               legend: {
-                text: "Your date of birth",
+                text: "Date of birth",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--s"
               }
@@ -135,7 +135,7 @@
             name: "gender-member3",
             fieldset: {
               legend: {
-                text: "Your gender",
+                text: "Gender",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--s"
               }
