--- a/app/views/forms/housing/CBL5yearsadd-joint.html
+++ b/app/views/forms/housing/CBL5yearsadd-joint.html
@@ -153,9 +153,9 @@
               checked: checked("leave1-joint", "Asked or told to leave")
             },
             {
-              value: "Marriage breakdown",
-              text: "Marriage breakdown",
-              checked: checked("leave1-joint", "Marriage breakdown")
+              value: "Relation breakdown",
+              text: "Relation breakdown",
+              checked: checked("leave1-joint", "Relation breakdown")
             },
             {
               value: "End of lease",
