--- a/app/views/forms/housing/CBLadd-child2-loop.html
+++ b/app/views/forms/housing/CBLadd-child2-loop.html
@@ -146,7 +146,7 @@
 
       {{ govukInput({
         label: {
-          text: "Enter their address"
+          text: "Enter their address, including postcode"
         },
         id: "child-add2",
         name: "child-add2",
