--- a/app/views/forms/housing/amendment/contact.html
+++ b/app/views/forms/housing/amendment/contact.html
@@ -21,7 +21,7 @@
     
           {{ govukInput({
             label: {
-              text: "Telephone/mobile number"
+              text: "Phone"
             },
             id: "telephone-number",
             name: "telephone-number",
