--- a/app/views/forms/housing/medical/about-you.html
+++ b/app/views/forms/housing/medical/about-you.html
@@ -32,7 +32,7 @@
 
       {{ govukInput({
         label: {
-          text: "Telephone/mobile number"
+          text: "Phone"
         },
         id: "telephone-number",
         name: "telephone-number",
