--- a/app/views/patterns/add-to-a-list/summary.html
+++ b/app/views/patterns/add-to-a-list/summary.html
@@ -76,7 +76,7 @@
       
         <div class="app-check-your-answers__contents">
           <dt class="app-check-your-answers__question">
-            Their date of birth
+            Date of birth
           </dt>
           <dd class="app-check-your-answers__answer">
               01/02/1986
@@ -107,7 +107,7 @@
         
           <div class="app-check-your-answers__contents">
             <dt class="app-check-your-answers__question">
-              Their date of birth
+              Date of birth
             </dt>
             <dd class="app-check-your-answers__answer">
                 09/10/2005
