update equality questionnaire

--- a/app/views/forms/equal-opportunities/disability.html
+++ b/app/views/forms/equal-opportunities/disability.html
@@ -66,5 +66,11 @@ Disability - Equality and diversity
 
     </div>
 </div>
-
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:</h3>
+  <ul class="govuk-list govuk-list--bullet">
+      <li>yes opens a new set of two radio buttons</li>
+      <li>No validation of the radio buttons</li>
+  </ul>
+</div>
 {% endblock %}
