--- a/app/views/forms/equal-opportunities/identity.html
+++ b/app/views/forms/equal-opportunities/identity.html
@@ -32,7 +32,7 @@ Identity - Equality and diversity
             name: "identity",
             fieldset: {
                 legend: {
-                text: "What do you feel is your national identity?",
+                text: "How do you identify?",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--m"
                 }
@@ -67,6 +67,10 @@ Identity - Equality and diversity
                 conditional: {
                     html: otherIdentityHtml
                   }
+                },
+                {
+                    value: "no",
+                    text: "Prefer not to say"
                 }
             ]
             }) }}
@@ -81,5 +85,19 @@ Identity - Equality and diversity
 
     </div>
 </div>
-
+<br>
+<br>
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>initial question was: What do you feel is your national identity?</li>
+    </ul>
+</div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>no validation - they can move on even if they don't select anything</li>
+    <li>Other open a text box, but can stay empty - no validation</li>
+    </ul>
+</div>
 {% endblock %}
