--- a/app/views/forms/equal-opportunities/religion1.html
+++ b/app/views/forms/equal-opportunities/religion1.html
@@ -44,40 +44,36 @@ Religion - Equality and diversity
               text: "None"
             },
             {
-              value: "Church of Scotland",
-              text: "Church of Scotland"
-            },
-            {
-              value: "Roman Catholic",
-              text: "Roman Catholic"
-            },
-            {
-              value: "Other Christian",
-              text: "Other Christian"
-            },
-            {
-              value: "Muslim",
-              text: "Muslim"
+              value: "atheist",
+              text: "Atheist"
             },
             {
               value: "Buddhist",
               text: "Buddhist"
             },
             {
-              value: "Sikh",
-              text: "Sikh"
+              value: "Catholic",
+              text: "Catholic"
             },
             {
-              value: "Jewish",
-              text: "Jewish"
+              value: "Other Christian",
+              text: "Other Christian"
             },
             {
               value: "Hindu",
               text: "Hindu"
             },
             {
-              value: "Pagan",
-              text: "Pagan"
+              value: "Jewish",
+              text: "Jewish"
+            },
+            {
+              value: "Muslim",
+              text: "Muslim"
+            },
+            {
+              value: "Sikh",
+              text: "Sikh"
             },
             {
               value: "Another",
@@ -99,7 +95,13 @@ Religion - Equality and diversity
 <div class="design-notes-box">
   <h3 class="govuk-heading-s">Design notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-  <li>see changed <a href="/forms/equal-opportunities/religion1">version</a></li>
+  <li>see original <a href="/forms/equal-opportunities/religion">version</a></li>
+  </ul>
+</div>
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:</h3>
+  <ul class="govuk-list govuk-list--bullet">
+  <li>no validation at all, just a textbox opens if select: another religion</li>
   </ul>
 </div>
 
