update equality questionnaire

--- a/app/views/forms/equal-opportunities/age.html
+++ b/app/views/forms/equal-opportunities/age.html
@@ -51,6 +51,10 @@ Age - Equality and diversity
             {
               value: "60-over",
               text: "60 or over"
+            },
+            {
+              value: "no",
+              text: "Prefer not to say"
             }
           ]
         }) }}
