--- a/app/views/forms/equal-opportunities/religion1.html
+++ b/app/views/forms/equal-opportunities/religion1.html
@@ -81,6 +81,10 @@ Religion - Equality and diversity
               conditional: {
                 html: otherHtml
               }
+            },
+            {
+              value: "no",
+              text: "Prefer not to say"
             }
           ]
         }) }}
