--- a/app/views/forms/equal-opportunities/start1.html
+++ b/app/views/forms/equal-opportunities/start1.html
@@ -38,7 +38,7 @@ Equality and diversity
     <ul class="govuk-list govuk-list--bullet">
     <li><strong>you would reach that page via a link on the  confirmation page stating: takes less than 1 minute</strong></li>
     <li>This is based on a document provided by Maureen from Housing - but simplified</li>
-    <li>Ideally, we would want a questionnaire for the whole council<li>
+    <li>Ideally, we would want a questionnaire for the whole council</li>
     <li>see the longer original <a href="/forms/equal-opportunities/start">start page</a></li>
     </ul>
 </div>
